--- a/style.css
+++ b/style.css
@@ -339,6 +339,8 @@ button:hover {
   height: 210px;
   display: inline-block;
   background: #D0CDC7;
+  margin-top: 15px;
+  margin-bottom: 55px;
 }
 
 .start-your-mob h5 {
@@ -462,6 +464,63 @@ span.start-a-mob {
   height: 1px;
   margin-top: 30px;
 }
+
+.upcoming .upcoming-mobs {
+  width: 625px;
+}
+
+.upcoming h4 {
+  color: #414141;
+  font-size: 23px;
+  margin-top: 10px;
+  float: left;
+  display: inline-block;
+}
+
+.upcoming table {
+  width: 625px;
+  height: 165px;
+  float: left;
+  box-shadow: none;
+  margin-top: 20px;
+}
+
+.upcoming table .name {
+  color: #414141;
+  font-size: 13px;
+  font-weight: bolder;
+  text-align: left;
+}
+
+.upcoming table .needed {
+  color: #414141;
+  font-size: 13px;
+  text-align: center;
+  padding-left: 60px;
+}
+
+.upcoming table .date {
+  color: #787878;
+  font-size: 13px;
+  text-align: center;
+  padding-left: 80px;
+}
+
+td {
+  border: 1px solid #B1B1B1;
+  border-right: 0px;
+  border-left: 0px;
+  padding: 13px 0px 13px 0px;
+}
+
+tr:first-child td{
+  border-top: 0px;
+}
+
+tr:last-child td{
+  border-bottom: 0px;
+}
+
  /*footer section */
 footer {
   background: #545252;
