Fix thickness of Start Your Mob hr

--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ span.start-a-mob {
   top: -52px;
 }
 
-.start-your-mob hr {
+.upcoming .start-your-mob-line {
   height: 7px;
   width: 220px;
   background: #BDBBB5;
