--- a/style.css
+++ b/style.css
@@ -366,6 +366,10 @@ button:hover {
   right: -11px;
 }
 
+.start-your-mob button:hover {
+  background: linear-gradient(to bottom, #dbdad9 0%,#c4c1bc 100%);
+}
+
 span.start-a-mob {
   color: #0080B4;
   font-size: 24px;
