Fixed padding on email input. Righteous!

--- a/style.css
+++ b/style.css
@@ -609,14 +609,14 @@ input {
 }
 
 .email {
-  width: 175px;
+  width: 160px;
   height: 45px;
   border-radius: 5px 0px 0px 5px;
   font-size: 14px;
   display: inline-block;
   float: left;
   border: 0px;
-  padding: 0px;
+  padding: 0 0 0 15px;
   color: #787878;
   border-right: 1px solid #525252;
 }
